java_api/MdhimLibrary.java

	/**
	 * Original signature : <code>void mdhimReleaseSecondaryInfo(secondary_info*)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/mdhim.h:1595</i>
	 */
	public static void mdhimReleaseSecondaryInfo(Pointer<secondary_info > si) {
		mdhimReleaseSecondaryInfo(Pointer.getPeer(si));
	}
	protected native static void mdhimReleaseSecondaryInfo(@Ptr long si);
	/**
	 * Original signature : <code>secondary_bulk_info* mdhimCreateSecondaryBulkInfo(index_t*, void***, int**, int*, int)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/mdhim.h:1597</i>
	 */
	public static Pointer<secondary_bulk_info > mdhimCreateSecondaryBulkInfo(Pointer<index_t > secondary_index, Pointer<Pointer<Pointer<? > > > secondary_keys, Pointer<Pointer<Integer > > secondary_key_lens, Pointer<Integer > num_keys, int info_type) {
		return (Pointer)Pointer.pointerToAddress(mdhimCreateSecondaryBulkInfo(Pointer.getPeer(secondary_index), Pointer.getPeer(secondary_keys), Pointer.getPeer(secondary_key_lens), Pointer.getPeer(num_keys), info_type), secondary_bulk_info.class);
	}
	@Ptr 
	protected native static long mdhimCreateSecondaryBulkInfo(@Ptr long secondary_index, @Ptr long secondary_keys, @Ptr long secondary_key_lens, @Ptr long num_keys, int info_type);
	/**
	 * Original signature : <code>void mdhimReleaseSecondaryBulkInfo(secondary_bulk_info*)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/mdhim.h:1599</i>
	 */
	public static void mdhimReleaseSecondaryBulkInfo(Pointer<secondary_bulk_info > si) {
		mdhimReleaseSecondaryBulkInfo(Pointer.getPeer(si));
	}
	protected native static void mdhimReleaseSecondaryBulkInfo(@Ptr long si);
	public int max_rangesrvs() {
		try {
			return (int)BridJ.getNativeLibrary("mdhim").getSymbolPointer("max_rangesrvs").as(int.class).get();
		}catch (Throwable $ex$) {
			throw new RuntimeException($ex$);
		}
	}
	public MdhimLibrary max_rangesrvs(int max_rangesrvs) {
		try {
			{
				BridJ.getNativeLibrary("mdhim").getSymbolPointer("max_rangesrvs").as(int.class).set(max_rangesrvs);
				return this;
			}
		}catch (Throwable $ex$) {
			throw new RuntimeException($ex$);
		}
	}
	/** Undefined type */
	public static interface UT_hash_handle {
		
	};
	/** Undefined type */
	public static interface index {
		
	};
	/** Undefined type */
	public static interface MPI_Request {
		
	};
	/** Undefined type */
	public static interface MPI_Comm {
		
	};
}
